Chore: Test cleanup and shared base refactors
Tightens RepositoryTestBase wiring, deduplicates per-test setup that
moved to the base, and applies spotless formatting (fully-qualified
type references replaced with imports) across the affected test files.